# LicenseCrypt

./: AES.cpp  CMakeLists.txt  LicenseInfo.cpp  LicenseInfo.h  main.cpp
